cmake_minimum_required(VERSION 3.9)
project(push)

set(CMAKE_CXX_STANDARD 11)

add_executable(push
        d00/ex00/main.cpp
        d00/ex01/Fields.hpp
        d00/ex01/main.cpp
        d00/ex01/PhoneBook.cpp
        d00/ex01/PhoneBook.hpp
        d00/ex02/Account.class.cpp
        d01/ex00/main.cpp
        d01/ex00/Pony.cpp
        d01/ex00/Pony.hpp
        d01/ex01/ex01.cpp
        d01/ex02/main.cpp
        d01/ex02/Zombie.cpp
        d01/ex02/Zombie.hpp
        d01/ex02/ZombieEvent.cpp
        d01/ex02/ZombieEvent.hpp
        d01/ex03/main.cpp
        d01/ex03/Zombie.cpp
        d01/ex03/Zombie.hpp
        d01/ex03/ZombieHorde.cpp
        d01/ex03/ZombieHorde.hpp
        d01/ex04/ex04.cpp
        d01/ex05/Brain.cpp
        d01/ex05/Brain.hpp
        d01/ex05/Human.cpp
        d01/ex05/Human.hpp
        d01/ex05/main.cpp
        d01/ex06/HumanA.cpp
        d01/ex06/HumanA.hpp
        d01/ex06/HumanB.cpp
        d01/ex06/HumanB.hpp
        d01/ex06/main.cpp
        d01/ex06/Weapon.cpp
        d01/ex06/Weapon.hpp
        d01/ex07/main.cpp
        d01/ex08/Human.cpp
        d01/ex08/Human.hpp
        d01/ex08/main.cpp
        d01/ex09/Logger.cpp
        d01/ex09/Logger.hpp
        d01/ex09/main.cpp
        d01/ex10/Cat.cpp
        d01/ex10/Cat.hpp
        d01/ex10/main.cpp
        d02/ex00/Fixed.class.cpp
        d02/ex00/Fixed.class.hpp
        d02/ex00/main.cpp
        d02/ex01/Fixed.class.cpp
        d02/ex01/Fixed.class.hpp
        d02/ex01/main.cpp
        d02/ex02/Fixed.class.cpp
        d02/ex02/Fixed.class.hpp
        d02/ex02/main.cpp
        d02/ex04/Fixed.class.cpp
        d02/ex04/Fixed.class.hpp
        d02/ex04/main.cpp
        d03/ex00/FragTrap.cpp
        d03/ex00/FragTrap.hpp
        d03/ex00/main.cpp
        d03/ex01/FragTrap.cpp
        d03/ex01/FragTrap.hpp
        d03/ex01/main.cpp
        d03/ex01/ScavTrap.cpp
        d03/ex01/ScavTrap.hpp
        d03/ex02/ClapTrap.cpp
        d03/ex02/ClapTrap.hpp
        d03/ex02/FragTrap.cpp
        d03/ex02/FragTrap.hpp
        d03/ex02/main.cpp
        d03/ex02/ScavTrap.cpp
        d03/ex02/ScavTrap.hpp
        d03/ex03/ClapTrap.cpp
        d03/ex03/ClapTrap.hpp
        d03/ex03/FragTrap.cpp
        d03/ex03/FragTrap.hpp
        d03/ex03/main.cpp
        d03/ex03/NinjaTrap.cpp
        d03/ex03/NinjaTrap.hpp
        d03/ex03/ScavTrap.cpp
        d03/ex03/ScavTrap.hpp
        d03/ex04/ClapTrap.cpp
        d03/ex04/ClapTrap.hpp
        d03/ex04/FragTrap.cpp
        d03/ex04/FragTrap.hpp
        d03/ex04/main.cpp
        d03/ex04/NinjaTrap.cpp
        d03/ex04/NinjaTrap.hpp
        d03/ex04/ScavTrap.cpp
        d03/ex04/ScavTrap.hpp
        d03/ex04/SuperTrap.cpp
        d03/ex04/SuperTrap.hpp
        d04/ex00/main.cpp
        d04/ex00/Peon.cpp
        d04/ex00/Peon.hpp
        d04/ex00/Sorcerer.cpp
        d04/ex00/Sorcerer.hpp
        d04/ex00/Victim.cpp
        d04/ex00/Victim.hpp
        d04/ex01/AWeapon.cpp
        d04/ex01/AWeapon.hpp
        d04/ex01/Character.cpp
        d04/ex01/Character.hpp
        d04/ex01/Enemy.cpp
        d04/ex01/Enemy.hpp
        d04/ex01/main.cpp
        d04/ex01/PlasmaRifle.cpp
        d04/ex01/PlasmaRifle.hpp
        d04/ex01/PowerFist.cpp
        d04/ex01/PowerFist.hpp
        d04/ex01/RadScorpion.cpp
        d04/ex01/RadScorpion.hpp
        d04/ex01/SuperMutant.cpp
        d04/ex01/SuperMutant.hpp
        d04/ex02/AssaultTerminator.cpp
        d04/ex02/AssaultTerminator.hpp
        d04/ex02/ISpaceMarine.hpp
        d04/ex02/ISquad.hpp
        d04/ex02/main.cpp
        d04/ex02/Squad.cpp
        d04/ex02/Squad.hpp
        d04/ex02/TacticalMarine.cpp
        d04/ex02/TacticalMarine.hpp
        d04/ex03/AMateria.cpp
        d04/ex03/AMateria.hpp
        d04/ex03/Character.cpp
        d04/ex03/Character.hpp
        d04/ex03/Cure.cpp
        d04/ex03/Cure.hpp
        d04/ex03/Ice.cpp
        d04/ex03/Ice.hpp
        d04/ex03/ICharacter.hpp
        d04/ex03/IMateriaSource.hpp
        d04/ex03/main.cpp
        d04/ex03/MateriaSource.cpp
        d04/ex03/MateriaSource.hpp
        d05/ex00/Bureaucrat.cpp
        d05/ex00/Bureaucrat.hpp
        d05/ex00/main.cpp
        d05/ex01/Bureaucrat.cpp
        d05/ex01/Bureaucrat.hpp
        d05/ex01/Form.cpp
        d05/ex01/Form.hpp
        d05/ex01/main.cpp
        d05/ex02/Bureaucrat.cpp
        d05/ex02/Bureaucrat.hpp
        d05/ex02/Form.cpp
        d05/ex02/Form.hpp
        d05/ex02/main.cpp
        d05/ex02/PresidentialPardonForm.cpp
        d05/ex02/PresidentialPardonForm.hpp
        d05/ex02/RobotomyRequestForm.cpp
        d05/ex02/RobotomyRequestForm.hpp
        d05/ex02/ShrubberyCreationForm.cpp
        d05/ex02/ShrubberyCreationForm.hpp
        d05/ex03/Bureaucrat.cpp
        d05/ex03/Bureaucrat.hpp
        d05/ex03/Form.cpp
        d05/ex03/Form.hpp
        d05/ex03/Intern.cpp
        d05/ex03/Intern.hpp
        d05/ex03/main.cpp
        d05/ex03/PresidentialPardonForm.cpp
        d05/ex03/PresidentialPardonForm.hpp
        d05/ex03/RobotomyRequestForm.cpp
        d05/ex03/RobotomyRequestForm.hpp
        d05/ex03/ShrubberyCreationForm.cpp
        d05/ex03/ShrubberyCreationForm.hpp
        d05/ex04/Bureaucrat.cpp
        d05/ex04/Bureaucrat.hpp
        d05/ex04/Form.cpp
        d05/ex04/Form.hpp
        d05/ex04/Intern.cpp
        d05/ex04/Intern.hpp
        d05/ex04/main.cpp
        d05/ex04/OfficeBlock.cpp
        d05/ex04/OfficeBlock.hpp
        d05/ex04/PresidentialPardonForm.cpp
        d05/ex04/PresidentialPardonForm.hpp
        d05/ex04/RobotomyRequestForm.cpp
        d05/ex04/RobotomyRequestForm.hpp
        d05/ex04/ShrubberyCreationForm.cpp
        d05/ex04/ShrubberyCreationForm.hpp
        d06/ex00/main.cpp
        d06/ex01/serialize.cpp
        d06/ex02/main.cpp
        d07/ex00/whatever.cpp
        d07/ex01/iter.cpp
        d07/ex02/main.cpp
        d08/ex00/easyfind.hpp
        d08/ex00/main.cpp
        rush00/Asteroid.cpp
        rush00/Asteroid.hpp
        rush00/Boss.cpp
        rush00/Boss.hpp
        rush00/Enemies.cpp
        rush00/Enemies.hpp
        rush00/ftList.cpp
        rush00/ftList.hpp
        rush00/Game.cpp
        rush00/Game.hpp
        rush00/GameObj.cpp
        rush00/GameObj.hpp
        rush00/IGameObj.hpp
        rush00/main.cpp
        rush00/Ncurse.cpp
        rush00/Ncurse.hpp
        rush00/Player.cpp
        rush00/Player.hpp
        rush00/Shot.cpp
        rush00/Shot.hpp
        rush00/tool.hpp)
